# python-client

./: .gitignore  .readthedocs.yml  .tool-versions  DEVELOPMENT.md  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test.py
.github/workflows/: main.yml  publish.yml
_modules/: blueskyapi.html  index.html
_modules/blueskyapi/: client.html  errors.html
cassettes/describe_latest_forecast/: test_integration.yaml
docs/: conf.py  index.rst  requirements.txt
src/blueskyapi/: __init__.py  __version__.py  client.py  default_config.py  errors.py
tests/: conftest.py
tests/blueskyapi/: client_test.py  errors_test.py  test_client.py  test_errors.py
tests/blueskyapi/cassettes/: TestLatestForecast.test_integration.yaml
tests/cassettes/describe_forecast_history/: test_integration.yaml
tests/cassettes/describe_latest_forecast/: test_integration.yaml
