[tool.poetry]
name = "blueskyapi"
version = "0.1.0"
description = "Client for blueskyapi.io"
authors = ["blueskyapi.io <contact@blueskyapi.io>"]
license = "MIT"
readme = "README.md"

homepage = "https://blueskyapi.io"
repository = "https://github.com/bluesky-api/python-client"

keywords = ["weather", "data", "api"]

classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License"
]

packages = [
    { include = "blueskyapi", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
