[tool.poetry]
name = "blueskyapi"
version = "0.1.0"
description = "Client for blueskyapi.io"
authors = ["blueskyapi.io <contact@blueskyapi.io>"]
license = "MIT"
readme = "README.md"

homepage = "https://blueskyapi.io"
repository = "https://github.com/bluesky-api/python-client"

keywords = ["weather", "data", "api"]

packages = [
    { include = "blueskyapi", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1"
requests = "^2.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[tool.black]
target-version = ['py37']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
