[tool.poetry]
name = "blueskyapi"
version = "0.1.3"
description = "Client for blueskyapi.io"
authors = ["blueskyapi.io <contact@blueskyapi.io>"]
license = "MIT"
readme = "README.md"

homepage = "https://blueskyapi.io"
repository = "https://github.com/bluesky-api/python-client"
documentation = "https://blueskyapi.readthedocs.io/en/stable/"

keywords = ["weather", "data", "api"]

packages = [
    { include = "blueskyapi", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.1"
requests = "^2.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
coveralls = "^3.3.1"
pytest = "^6.2.5"
pytest-sugar = "^0.9.4"
pytest-mock = "^3.6.1"
pytest-watch = "^4.2.0"
pytest-cov = "^3.0.0"
pytest-vcr = "^1.0.2"
responses = "^0.16.0"
autoflake = "^1.4"
pytest-describe = "^2.0.1"
doubles = "^1.5.3"
mypy = "^0.930"
pandas-stubs = "^1.2.0"
types-requests = "^2.26.3"
Sphinx = "^4.3.2"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.12.0"

[tool.black]
target-version = ['py37']

[tool.isort]
py_version = 37
profile = "black"
force_single_line = true
combine_as_imports = true
lines_after_imports = 2
src_paths = ["src", "tests"]

[tool.coverage.run]
source = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
